# js-regex

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  reader.rs  unicode.rs  validator.rs
tests/: invalid.rs  valid.rs
